--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Jethro Glaudin",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "jshint": "^2.10.2",
     "nodemon": "^1.19.0"
