--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "jshint": "^2.10.2",
+    "mongoose": "^5.5.10",
     "nodemon": "^1.19.0"
   }
 }
