--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "express app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Jethro Glaudin",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "jshint": "^2.10.2",
     "mongoose": "^5.5.10",
